tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all type and fn and value defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.val_decl)),

        // then the expressions to evaluate, in order
        optional($.expression),
      ),

    _atom: $ =>
      choice(
        $.unit,
        $.bool_literal,
        $.int8_literal,
        $.uint8_literal,
        $.int16_literal,
        $.uint16_literal,
        $.int32_literal,
        $.uint32_literal,
        $.int64_literal,
        $.uint64_literal,
        $.int128_literal,
        $.uint128_literal,
        $.bigint_literal,
        $.float_literal,
        $.string_segment,
        $.char_literal,
        $.list_literal,
        $.dict_literal,
        $.record_literal,
        $.enum_literal,
        $.variable_identifier,
        $.field_access,
        $.tuple_literal,
        $.record_update,
        $.qualified_val_or_fn_name,
        $.dbReference,
        $.paren_expression,
      ),

    // operand/value tier: an atom, a function application, or an infix chain.
    // `apply` is included so applications can be infix operands and values.
    simple_expression: $ =>
      choice(
        $._atom,
        $.apply,
        $.infix_operation,
      ),

    expression: $ =>
      choice(
        // `apply` is reachable via `simple_expression`; not listed separately
        // here (that would make it derivable two ways → grammar conflict).
        $.simple_expression,

        $.if_expression,
        $.let_expression,

        $.match_expression,

        $.lambda_expression,
        $.pipe_expression,
        $.statement,
      ),

    statement: $ =>
      prec.left(
        PREC.STATEMENT,
        seq(field("first", $.expression), field("next", $.expression)),
      ),

    //
    // Booleans
    bool_literal: $ => choice(/true/, /false/),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.

    digits: $ => choice($.positive_digits, $.negative_digits),
    negative_digits: $ => /-\d+/,
    positive_digits: $ => /\d+/,

    int8_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("y", $.symbol))),

    uint8_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("uy", $.symbol)),
      ),

    int16_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("s", $.symbol))),

    uint16_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("us", $.symbol)),
      ),

    int32_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("l", $.symbol))),

    uint32_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("ul", $.symbol)),
      ),

    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    uint64_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("UL", $.symbol)),
      ),

    int128_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("Q", $.symbol))),

    uint128_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("Z", $.symbol)),
      ),

    // The default, arbitrary-precision `Int` — a suffix-less integer literal.
    bigint_literal: $ => field("digits", $.digits),

    //
    // Floats
    infix_operation: $ =>
      // given `1 + 2 * 3`, this will parse as `1 + (2 * 3)`
      choice(
        // Power
        prec.right(
          PREC.EXPONENT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(exponentOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // multiplication, division, modulo
        prec.left(
          PREC.PRODUCT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(multiplicativeOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // addition, subtraction
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(additiveOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(comparisonOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Logical operations
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // String concatenation
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(stringConcatOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
      ),

    //
    // If expressions
    if_expression: $ =>
      prec.right(
        seq(
          field("keyword_if", alias("if", $.keyword)),
          field("condition", $.expression),
          field("keyword_then", alias("then", $.keyword)),
          choice(
            seq(
              $.indent,
              repeat1(field("then_expression", $.expression)),
              $.dedent,
            ),
            field("then_expression", $.expression),
          ),
          optional(
            seq(
              field("keyword_else", alias("else", $.keyword)),
              choice(
                seq(
                  $.indent,
                  repeat(field("else_expression", $.expression)),
                  $.dedent,
                ),
                field("else_expression", $.expression),
              ),
            ),
          ),
        ),
      ),

    // field access
    // e.g. `person.name`
    apply: $ =>
      prec.right(
        seq(
          // TODO: fn should be an expression
          field("fn", $.qualified_fn_name),
          choice(
            seq(
              // args are `_atom`s (not `simple_expression`) so application
              // binds tighter than infix: `f a + b` is `(f a) + b`, and an
              // operator stops arg collection so `f x ++ g y` is `(f x) ++ (g y)`.
              field("args", repeat1($._atom)),
              optional($._function_boundary),
            ),
            seq(
              $.indent,
              field("args", seq($.expression, repeat(seq(/\n/, $.expression)))),
              $.dedent,
            ),
          ),
        ),
      ),

    // ---------------------
    // Pipe expressions
    // ---------------------

    //
    // Pipe lambda
    operator: $ =>
      choice(
        exponentOperator,
        multiplicativeOperators,
        additiveOperators,
        comparisonOperators,
        logicalOperators,
        stringConcatOperator,
      ),

    qualified_fn_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          $.fn_identifier,
        ),
        optional(field("type_args", $.type_args)),
      ),

    fn_identifier: $ => prec(PREC.FN_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    /** e.g. `x` in `let double (x: Int) = x + x`
     *
     * for let bindings, params, etc. */
    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    // e.g. `Dict { ``Content-Length`` } = "0"`
