tree-sitter-darklang/test/corpus/exhaustive/exprs/if_else.txt
==================
inline if/else statement - no else
==================

if true then a

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (bool_literal))) (keyword)
      (expression (simple_expression (variable_identifier)))
    )
  )
)


==================
inline if/elif/else statement
==================

if true then a else if false then b else c

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (bool_literal))) (keyword)
      (expression (simple_expression (variable_identifier)))
      (keyword)
      (expression
        (if_expression
          (keyword) (expression (simple_expression (bool_literal))) (keyword)
          (expression (simple_expression (variable_identifier)))
          (keyword) (expression (simple_expression (variable_identifier)))
        )
      )
    )
  )
)


==================
inline if/else statement
==================

if true then a else b

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (bool_literal))) (keyword)
      (expression (simple_expression (variable_identifier)))
      (keyword) (expression (simple_expression (variable_identifier)))
    )
  )
)


==================
basic if/else statement
==================

if a > b then
  a
else
  b

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent)
    )
  )
)


==================
if without else
==================

if a > b then
  a

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent)
    )
  )
)



==================
ambiguous if/else statement (the else is for the outer if statement)
==================

if a then
  if b then
    c
else
  d

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (variable_identifier))) (keyword)
      (indent)
      (expression
        (if_expression
          (keyword) (expression (simple_expression (variable_identifier))) (keyword)
          (indent)
          (expression (simple_expression (variable_identifier)))
          (dedent)
        )
      )
      (dedent)
      (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent)
    )
  )
)


==================
ambiguous if/else statement (else is for the inner if statement)
==================

if a then
  if b then
    c
  else
    d

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (variable_identifier))) (keyword)
      (indent)
      (expression
        (if_expression
          (keyword) (expression (simple_expression (variable_identifier))) (keyword)
          (indent) (expression (simple_expression (variable_identifier)))
          (dedent)
          (keyword)
          (indent) (expression (simple_expression (variable_identifier)))
          (dedent)
        )
      )
      (dedent)
    )
  )
)


==================
nested if/else statement
==================

if a > b then
  if c > d then
    c
  else
    if e > f then
      e
    else
      if g > h then
        g
      else
        h
else
  b

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
      (indent)
      (expression
        (if_expression
          (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
          (indent) (expression (simple_expression (variable_identifier)))
          (dedent)
          (keyword)
          (indent)
          (expression
            (if_expression
              (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
              (indent) (expression (simple_expression (variable_identifier)))
              (dedent)
              (keyword)
              (indent)
              (expression
                (if_expression
                  (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
                  (indent) (expression (simple_expression (variable_identifier)))
                  (dedent)
                  (keyword)
                  (indent) (expression (simple_expression (variable_identifier)))
                  (dedent)
                )
              )
              (dedent)
            )
          )
          (dedent)
        )
      )
      (dedent)
      (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent)
    )
  )
)




==================
if/elif/else statement
==================

if a > b then
  a
else if c > d then
  c
else
  d

---


(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent) (keyword)
      (expression
        (if_expression
          (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
          (indent) (expression (simple_expression (variable_identifier)))
          (dedent) (keyword)
          (indent) (expression (simple_expression (variable_identifier)))
          (dedent)
        )
      )
    )
  )
)



==================
if/elif
==================

if a > b then
  a
else if c > d then
  c

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent) (keyword)
      (expression
        (if_expression
          (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
          (indent) (expression (simple_expression (variable_identifier)))
          (dedent)
        )
      )
    )
  )
)



==================
if/else tab indentation
==================

if a > b then
	a
else
	b

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent)
    )
  )
)


==================
if/else double space indentation
==================

if a > b then
  a
else
  b

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent) (keyword)
      (indent) (expression (simple_expression (variable_identifier)))
      (dedent)
    )
  )
)



==================
if/else mix of tab and double space indentation - (TODO: maybe this should error?)
==================

if a > b then
	if c > d then
    c
 else
	d

---

(source_file
  (expression
    (if_expression
      (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
      (indent)
      (expression
        (if_expression
          (keyword) (expression (simple_expression (infix_operation (simple_expression (variable_identifier)) (operator) (simple_expression (variable_identifier))))) (keyword)
          (indent) (expression (simple_expression (variable_identifier)))
          (dedent)
          (keyword)
          (expression
            (simple_expression (variable_identifier)))
        )
      )
      (dedent)
    )
  )
)


==================
if/else mix of tab and double space indentation -error
==================

if a > b then
 if c > d then
	c
   else
	d

---

(source_file
  (expression
    (if_expression
      (keyword)
      (expression
        (simple_expression
          (infix_operation
            (simple_expression (variable_identifier))
            (operator)
            (simple_expression (variable_identifier))
          )
        )
      )
      (keyword)
      (indent)
      (expression
        (if_expression
          (keyword)
          (expression
            (simple_expression
              (infix_operation
                (simple_expression (variable_identifier))
                (operator)
                (simple_expression (variable_identifier))
              )
            )
          )
          (keyword)
          (expression
            (statement
              (expression
                (simple_expression
                  (apply
                    (qualified_fn_name (fn_identifier))
                    (indent)
                  (expression (simple_expression (variable_identifier)))
                    (dedent)
                  )
                )
              )
              (expression (simple_expression (variable_identifier))
              )
            )
          )
        )
      )
      (dedent)
    )
  )
)
