tree-sitter-darklang/test/corpus/exhaustive/exprs/ints.txt
==================
bigint (suffixless) literal
==================

0

---

(source_file (expression (simple_expression (bigint_literal (digits (positive_digits))))))


==================
bigint (suffixless) literal - large
==================

12345678901234567890

---

(source_file (expression (simple_expression (bigint_literal (digits (positive_digits))))))


==================
bigint (suffixless) literal - negative
==================

-5

---

(source_file (expression (simple_expression (bigint_literal (digits (negative_digits))))))


==================
int8 literal
==================

-1y

---

(source_file (expression (simple_expression (int8_literal (digits (negative_digits)) (symbol)))))


==================
uint8 literal
==================

1uy

---

(source_file (expression (simple_expression (uint8_literal (positive_digits) (symbol)))))


==================
int16 literal
==================

1s

---

(source_file (expression (simple_expression (int16_literal (digits (positive_digits)) (symbol)))))


==================
uint16 literal
==================

1us

---

(source_file (expression (simple_expression (uint16_literal (positive_digits) (symbol)))))


==================
int32 literal
==================

-1l

---

(source_file (expression (simple_expression (int32_literal (digits (negative_digits)) (symbol)))))


==================
uint32 literal
==================

1ul

---

(source_file (expression (simple_expression (uint32_literal (positive_digits) (symbol)))))


==================
int64 literal (.net style)
==================

0L

---

(source_file (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol)))))


==================
uint64 literal
==================

1UL

---

(source_file (expression (simple_expression (uint64_literal (positive_digits) (symbol)))))


==================
int128 literal
==================

-1Q

---

(source_file (expression (simple_expression (int128_literal (digits (negative_digits)) (symbol)))))


==================
uint128 literal
==================

1Z

---

(source_file (expression (simple_expression (uint128_literal (positive_digits) (symbol)))))


==================
1900
==================

1900L

---

(source_file (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol)))))
